page/sass/common.scss
body{
    -webkit-font-smoothing: antialiased;
    padding-top: $navbar-height + 10px;
    overflow-x: hidden;
}

p.slim {
    font-weight: $font-weight-light;
}
h3.smaller {
    font-size: 20px;
}

.section ul.compact-list {
    padding: 0 0 $space-bottom-between-elements 0;    

    li {
        font-size: 16px;
        i {
            font-size: 17px;
            line-height: 22px;
            margin-right: 10px;
        }
        font-weight: $font-weight-bold;
        list-style: none;
        margin-bottom: 7px;
        color: $green;
    }
}

#react-root {
    min-height: 433px;
}

.main-container {
    @media (max-width: $screen-sm) {
        overflow: hidden;
    }
}

.person-info-container{
    margin-bottom: $padding-between-pictures;

    .person-info .person-details{
        margin-top: -62px;
        margin-left: 105px;
        margin-bottom: 29px;
    }
}

.navbar-no-border{
    border:0 !important;
}
.section{
    position: relative;
    padding-top: $padding-between-sections;
    padding-bottom: $padding-between-sections;
    border-bottom: 1px $off-white solid;

    .see-more{
        position: absolute;
        right: 50px;
        bottom: 0;
        background: none;
        border: 0px;
        color: $blue;
        font-size: 16px;
        transition:all 1s;
    }

    .hidden-picture{
        display: none;
    }
    .person-info h4{
        font-size: 16px;
        margin: 0px;
        font-weight: $font-weight-bold;
    }
    h3{
        margin-bottom: $margin-bottom-between-paragraphs;
        font-size: $section-title-font-size;
        font-weight: $font-weight-more-bold;
    }
    p{
        font-size: $font-size-normal;
        margin-bottom: $margin-bottom-between-paragraphs;
    }
    a{
        font-weight: $font-weight-more-bold;
        vertical-align: top;
    }
    button.btn.btn-white {
        background: white;
        color: #09719B;
        height: 40px;
        padding: 5px 45px 5px 45px;
        box-shadow: 0 1px 1px 0 rgba(163,192,204,0.31);
        border: 1px solid #09719B;
    }

    p.intro{
        font-weight: $font-weight-normal;
    }

    .pictures-container{
        padding-top: $padding-between-sections;
    }
}

.person-block{
    cursor: pointer;
}



.hexagon-wrapper {
    text-align: center;
    margin: 0px;;
    position: absolute;
    display: inline-block;

    .hexagon-blue {
        background-color: $blue-darker;
    }
    .hexagon-white-green {
        background-color: $white-green;
    }

    .hexagon {
        height: 100%;
        width: calc(100% * 0.57735);
        display: inline-block;
    }

    .hexagon:before {
        position: absolute;
        top: 0;
        right: calc((100% / 2) - ((100% * 0.57735) / 2));
        background-color: inherit;
        height: inherit;
        width: inherit;
        content: '';
        transform: rotateZ(60deg);
    }

    .hexagon:after {
        position: absolute;
        top: 0;
        right: calc((100% / 2) - ((100% * 0.57735) / 2));
        background-color: inherit;
        height: inherit;
        width: inherit;
        content: '';
        transform: rotateZ(-60deg);
    }
}


/* Portrait phones and smaller */
@media (max-width: $screen-md) {
    .hexagon-mobile{
        background: linear-gradient(145.45deg, #F2F9EA 0%, #F2F9EA 1.63%, #F8F9F9 85.72%, #F8F9FA 100%);
        height: 279px;
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
        margin-top: $padding-between-sections;
        h1{
            color: $blue-dark-light;
            margin: 0;
        }
        p{
            color: $blue-dark-light;
            font-weight: $font-weight-light;
        }
    }
    ul.navbar-right{
        li{
            float: left;
        }
    }
    .section.commit-funds{
        border-top:0px !important;
    }
    
}

